[gd_scene load_steps=15 format=3 uid="uid://qkcddvdcvhxo"]

[ext_resource type="Script" path="res://World/Maps/Map.gd" id="1_hti4m"]
[ext_resource type="PackedScene" uid="uid://b241uvbda12i4" path="res://World/Maps/Tilemap/TileMap.tscn" id="2_5w0gj"]
[ext_resource type="Script" path="res://World/Maps/Scripts/Platforms.gd" id="3_76dou"]
[ext_resource type="Script" path="res://World/Maps/Scripts/Collectables.gd" id="4_hpsqh"]
[ext_resource type="Script" path="res://World/Maps/Scripts/Obstacles.gd" id="5_gneaw"]
[ext_resource type="Script" path="res://World/Maps/Scripts/Triggers.gd" id="5_kcgaf"]
[ext_resource type="PackedScene" uid="uid://byk7fd1trpexg" path="res://World/Objects/DeathMarker/DeathMarker.tscn" id="5_vy6ul"]
[ext_resource type="Script" path="res://World/Maps/Scripts/Camera.gd" id="6_gia51"]
[ext_resource type="PackedScene" uid="uid://0avjotwae8ft" path="res://World/Entities/Player/Player.tscn" id="6_h4hor"]
[ext_resource type="Script" path="res://World/Maps/Scripts/Enemies.gd" id="7_4wag4"]
[ext_resource type="PackedScene" uid="uid://vjw55rhe6sxp" path="res://World/Objects/Goal/Goal.tscn" id="7_mgths"]
[ext_resource type="PackedScene" uid="uid://l1faff1x55u7" path="res://Interface/GUI.tscn" id="8_nklev"]
[ext_resource type="AudioStream" uid="uid://j0h4lgw6ll7y" path="res://World/Objects/Collectables/get_sound.wav" id="13_3cx22"]
[ext_resource type="AudioStream" uid="uid://px4f48cpyr26" path="res://Common/Audio/cold_raindrops.wav" id="14_qfogs"]

[node name="Map" type="Node2D"]
script = ExtResource("1_hti4m")
metadata/_edit_vertical_guides_ = []

[node name="Map" parent="." instance=ExtResource("2_5w0gj")]

[node name="Platforms" type="Node2D" parent="."]
script = ExtResource("3_76dou")

[node name="Collectables" type="Node2D" parent="."]
script = ExtResource("4_hpsqh")

[node name="Boundaries" type="Node2D" parent="."]

[node name="BottomBoundary" type="Marker2D" parent="Boundaries"]
position = Vector2(0, 240)

[node name="RightBoundary" type="Marker2D" parent="Boundaries"]
position = Vector2(912, 240)

[node name="DeathMarker" parent="." instance=ExtResource("5_vy6ul")]
position = Vector2(-128, 0)

[node name="Triggers" type="Node2D" parent="."]
script = ExtResource("5_kcgaf")

[node name="Obstacles" type="Node2D" parent="."]
script = ExtResource("5_gneaw")

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource("7_4wag4")

[node name="Goal" parent="." instance=ExtResource("7_mgths")]
position = Vector2(864, 192)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(53, 198)
position_smoothing_enabled = true
script = ExtResource("6_gia51")

[node name="Player" parent="." instance=ExtResource("6_h4hor")]
position = Vector2(48, 192)

[node name="GUI" parent="." instance=ExtResource("8_nklev")]

[node name="Audio" type="Node2D" parent="."]

[node name="GetSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("13_3cx22")

[node name="Clapping" type="AudioStreamPlayer2D" parent="Audio"]

[node name="BGM" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("14_qfogs")

[connection signal="fit_to_grid" from="Platforms" to="." method="_on_objects_fit_to_grid"]
[connection signal="item_collected" from="Collectables" to="." method="_on_collectables_item_collected"]
[connection signal="trigger_broken" from="Triggers" to="." method="_on_triggers_trigger_broken"]
[connection signal="kill_player" from="Enemies" to="." method="_on_enemies_kill_player"]
[connection signal="goal_reached" from="Goal" to="." method="_on_goal_goal_reached"]
[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="back_to_stage_select" from="GUI" to="." method="_on_gui_back_to_stage_select"]
[connection signal="edit_button_pressed" from="GUI" to="." method="_on_gui_edit_button_pressed"]
[connection signal="exit_button_pressed" from="GUI" to="." method="_on_gui_exit_button_pressed"]
[connection signal="jump_button_pressed" from="GUI" to="." method="_on_gui_jump_button_pressed"]
[connection signal="pause_button_pressed" from="GUI" to="." method="_on_gui_pause_button_pressed"]
[connection signal="play_button_pressed" from="GUI" to="." method="_on_gui_play_button_pressed"]
[connection signal="rank_update" from="GUI" to="." method="_on_gui_rank_update"]
[connection signal="restart_button_pressed" from="GUI" to="." method="_on_gui_restart_button_pressed"]
[connection signal="resume_button_pressed" from="GUI" to="." method="_on_gui_resume_button_pressed"]
[connection signal="save_game" from="GUI" to="." method="_on_gui_save_game"]
